# minecraft_bot

./: .env.example  pyproject.toml  requirements.txt
bot/: __main__.py  config.py  exceptions.py
bot/filters/: is_admin.py
bot/handlers/: __init__.py  admin.py  base.py  server.py  worlds.py
bot/keyboards/: admin.py  inline.py
bot/services/: minecraft.py  server.py  system.py  worlds.py
bot/states/: worlds.py
bot/texts/: ru.py
