[project]
name = "minecraft-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aio-mc-rcon>=3.4.2",
    "aiogram>=3.29.1",
    "aiohttp>=3.14.1",
    "aiohttp-socks>=0.11.0",
    "loguru>=0.7.3",
    "mcstatus>=14.0.0",
    "pydantic-settings>=2.14.2",
]

[dependency-groups]
dev = []

[tool.pyright]
exclude = [
    ".git",
    ".venv",
    "__pycache__"
]
